# declarix

./: Cargo.toml  Makefile  README.md
.github/: FUNDING.yml
declarch/: Cargo.toml
declarch/src/: connect.rs  main.rs
declarch/src/database/: create.rs  database.rs  insert.rs  mod.rs  update.rs
declarch/src/installation/: init.rs  installers.rs  mod.rs
declarch/src/installation/database/: database.rs  mod.rs
declarch/src/linking/: copy.rs  link.rs  mod.rs  operations.rs
declarch/src/manage_data/: alias.rs  mod.rs  process_paths.rs  system.rs  tools.rs
declarch/src/removal/: database.rs  mod.rs  removal.rs  select.rs
declarch/src/services/: database.rs  mod.rs  services.rs
declarch/src/structures/: mod.rs  structs.rs
declarchRoot/: Cargo.toml
declarchRoot/src/: main.rs
declarix/: Cargo.toml
declarix/src/: connect.rs  main.rs
declarix/src/database/: copy.rs  create.rs  database.rs  insert.rs  mod.rs
declarix/src/installation/: init.rs  installers.rs
declarix/src/installation/database/: database.rs
declarix/src/linking/: copy.rs  link.rs  mod.rs  operations.rs
declarix/src/manage_data/: mod.rs  process_paths.rs  system.rs  tools.rs
declarix/src/removal/: database.rs  removal.rs  select.rs
declarix/src/services/: database.rs  mod.rs  services.rs
declarix/src/structures/: structs.rs
declarixRoot/: Cargo.toml
declarixRoot/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
