[package]
name = "declarch"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
dirs = "5.0.1"
serde = "1.0.204"
toml = "0.8.15"
shared = { path = "../shared" }
regex = "1.10.5"
regex-split = "0.1.0"
walkdir = "2.5.0"
users = "0.11.0"
serde_json = "1.0.120"
fasthash = "0.4.0"
filetime = "0.2.23"
base64 = "0.22.1"
rusqlite = "0.32.1"
textwrap = "0.16.1"
clap = { version = "4.5.14", features = ["derive", "cargo"] }
serde_derive = "1.0.205"
term_size = "0.3.2"
