[package]
name = "declarch"
version = "0.2.0"
edition = "2021"
description = "A declarative system management tool."
repository = "https://github.com/StarlightStargaze/Declarch"
license = "GPLv3"

[dependencies]
colored = "2.1.0"
dirs = "5.0.1"
serde = "1.0.204"
toml = "0.8.15"
shared = { path = "../shared" }
regex = "1.10.5"
regex-split = "0.1.0"
walkdir = "2.5.0"
users = "0.11.0"
filetime = "0.2.23"
rusqlite = "0.32.1"
textwrap = "0.16.1"
serde_derive = "1.0.205"
term_size = "0.3.2"
